--- a/Extension/popup/popup.html
+++ b/Extension/popup/popup.html
@@ -11,7 +11,7 @@
     <!-- Header with logo -->
     <div class="header">
       <img src="../icons/logo.png" alt="Friendly Lago" class="logo" />
-      <h1>Friendly Lago</h1>
+      <h1>Friendly Iago</h1>
       <p class="subtitle">Squawk! Let's make your words sparkle with kindness! ✨</p>
     </div>
 
@@ -29,7 +29,7 @@
 
     <!-- Action button -->
     <button id="checkBtn" class="primary-button">
-      Check with Friendly Lago
+      Check with Friendly Iago
     </button>
 
     <!-- Results area -->
